[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 64",
  "setuptools_scm >= 7",
]

[project]
name = "idaes-pse"
description="IDAES Process Systems Engineering Framework"
readme = { file = "README.md", content-type = "text/markdown" }
maintainers = [
{ name = "Keith Beattie", email = "ksbeattie@lbl.gov" }
]
license = { text = "BSD" }
urls = { Homepage = "https://idaes.org" }
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=["IDAES", "idaes-pse", "energy systems", "chemical engineering", "process modeling"]
dynamic = ["version"]
dependencies = [
  "pyomo >= 6.9.3",
  "pint >= 0.24.1", # required to use Pyomo units. Pint 0.24.1 needed for Python 3.9 support
  "networkx", # required to use Pyomo network
  "numpy>=1,<3", # pandas constraint added on 2023-08-30 b/c bug in v2.1  # see IDAES/idaes-pse#1253
  "pandas!=2.1.0,<3",
  "scipy",
  "sympy", # idaes.core.util.expr_doc
  "matplotlib",
  "click>=8",
]

[project.optional-dependencies]
ui = ["idaes-ui",]
coolprop = [
  "coolprop>=7.0", # idaes.generic_models.properties.general.coolprop
]
grid = [
  "gridx-prescient>=2.2.1", # idaes.tests.prescient
]
omlt = [
  "omlt==1.1", # fix the version for now as package evolves
  "tensorflow",
  "onnx",
]
testing = [
  "pytest",
  "addheader",
  "pyyaml",
]

# this will install all optional dependencies
all = ["idaes-pse[ui,grid,omlt,coolprop]"]

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/en/v8.1.0/extending/
local_scheme = "node-and-date"
version_scheme = "only-version"

[tool.setuptools]
zip-safe = false                     
include-package-data = true   


[tool.pylint.main]
py-version = "3.10"

[tool.setuptools.packages.find]
include = ["idaes*"]

[tool.setuptools.package-data]
"*" = [
    "*.template",
    "*.json",
    "*.yaml",
    "*.svg",
    "*.png",
    "*.jpg",
    "*.csv",
    "*.ipynb",
    "*.txt",
    "*.js",
    "*.css",
    "*.html",
    "*.json.gz",
    "*.dat",
    "*.h5",
    "*.pb",  # for Keras Surrogate folder
    "*.data-00000-of-00001",  # for Keras Surrogate folder
    "*.index",  # for Keras Surrogate folder
    "*.trc",
    "*.nl",
    "*.keras",  # idaes/core/surrogate/tests/data/keras_models
    "*.onnx",
]

[project.scripts]
idaes = "idaes.commands.base:command_base"

[project.entry-points."idaes.flowsheets"]
"0D_Fixed_Bed_TSA" = "idaes.models_extra.temperature_swing_adsorption.fixed_bed_tsa0d_ui"

[tool.pylint."messages control"]
disable = [
  "E", # all errors
  "W", # all warnings
  "C", # all conventions
  "R", # all refactor
]

# see https://pylint.readthedocs.io/en/v2.17.7/user_guide/messages/index.html
# for a list of all messages
enable = [
  "import-error",
  "unused-import",
  "wildcard-import",
  "wrong-import-order",
  "wrong-import-position",
  "ungrouped-imports",
  "implicit-str-concat",
  "dangerous-default-value",
  "invalid-name",
]

[tool.flake8]
ignore = ["W293","W291","W503","W504","E203"]
exclude = "tests"
max-line-length = 88
